--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="images/logo.png" alt="Logo">
+                <img src="images/logo(2).png" alt="Logo">
             </div>
             <ul class="nav-links">
                 <li><a href="home.html">Home</a></li>
@@ -335,7 +335,7 @@
 
     <div class="whatsapp-float">
         <a href="https://wa.me/your-number">
-            <img src="images/whatsapp.png" alt="WhatsApp" class="whatsapp-icon">
+            <img src="images/whatsapp-removebg-preview.png" alt="WhatsApp" class="whatsapp-icon">
         </a>
     </div>
 </body>
