--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         .nav-links {
             display: flex;
             gap: 1rem;
+             list-style-type: none; /* Remove default bullet points */
+    padding: 0; /* Remove default padding */
+    margin: 0; /* Remove default margin */
         }
 
         .nav-links a {
