--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         }
 
         .nav-links {
-            display: flex;
-            gap: 1rem;
-             list-style-type: none; /* Remove default bullet points */
+              list-style-type: none; /* Remove default bullet points */
     padding: 0; /* Remove default padding */
     margin: 0; /* Remove default margin */
+    flex-direction: row; /* Keep nav links in a single line */
+    gap: 1rem;
         }
 
         .nav-links a {
