--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         }
 
         .testimonials {
-            padding: 3rem 1rem;
+            padding: 1rem 1rem;
             background-color: #e0e0e0;
             text-align: center;
         }
@@ -307,15 +307,15 @@
             <h2>What Our Clients Say</h2>
             <div class="testimonial">
                 <p>"Amazing service! My essay was done on time and exceeded my expectations."</p>
-                <span>- Client A</span>
+                <span>- Henry Smith </span>
             </div>
             <div class="testimonial">
                 <p>"Great quality and excellent customer support!"</p>
-                <span>- Client B</span>
+                <span>- Victoria </span>
             </div>
             <div class="testimonial">
                 <p>"I highly recommend their writing services!"</p>
-                <span>- Client C</span>
+                <span>- Adam </span>
             </div>
         </section>
 
