--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         }
 
      .hero {
-    background-image: url('Artboard.jpg'); /* Use your hero image path */
+    background-image: url('images/Artboard.jpg'); /* Use your hero image path */
     background-size: cover; /* Ensure the image covers the area */
     background-position: center; /* Center the image */
     height: 400px; /* Adjust as necessary for laptops */
