--- a/index.html
+++ b/index.html
@@ -56,13 +56,16 @@
             transform: scale(1.1);
             box-shadow: 0 0 20px rgba(0, 123, 255, 0.8);
         }
-
-     .hero {
-    background-image: url('images\Artboard.jpg'); /* Use your hero image path */
-    background-size: cover; /* Ensure the image covers the area */
-    background-position: center; /* Center the image */
-    height: 400px; /* Adjust as necessary for laptops */
-}
+ .hero {
+            height: 100vh;
+            background: url('images/Artboard.jpg') no-repeat center center/cover;
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 0 2rem;
+        }
         .hero-content {
             animation: fadeIn 2s ease-out;
         }
