--- a/order.html
+++ b/order.html
@@ -204,7 +204,7 @@
                 <img src="images/logo (2).png" alt="Company Logo">
             </div>
             <ul class="nav-links">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="samples.html">Samples</a></li>
