--- a/services.html
+++ b/services.html
@@ -274,7 +274,7 @@
                 <img src="images/logo (2).png" alt="Company Logo">
             </div>
             <ul class="nav-links">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="About us.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>       
                 <li><a href="Sample.html">Samples</a></li>
